jsonschemadsl2ecore.trafo.opt/test/test94/invalidtests/example6.test94
{
	"adddv":"string is good",
	"xxcccxx":2,
	"zzzfff":5,
	"qqqeeesss":"more than 6",
	"qqfff":7,
	"rererccc":"must be an integer"
}